--- a/Signal/translations/be.lproj/Localizable.strings
+++ b/Signal/translations/be.lproj/Localizable.strings
@@ -67,9 +67,6 @@
 /* Users can request a report of their account data. This is the title on the screen where they do this. */
 "ACCOUNT_DATA_REPORT_TITLE" = "Даныя аб вашым уліковым запісу";
 
-/* Label for 'voice call' button in contact view. */
-"ACTION_AUDIO_CALL" = "Званок Signal";
-
 /* Label for 'invite' button in contact view. */
 "ACTION_INVITE" = "Запрасіць у Signal";
 
@@ -81,6 +78,9 @@
 
 /* Label for 'video call' button in contact view. */
 "ACTION_VIDEO_CALL" = "Відэазванок";
+
+/* Label for 'voice call' button in contact view. */
+"ACTION_VOICE_CALL" = "Signal Call";
 
 /* The title for the 'add group members' view. */
 "ADD_GROUP_MEMBERS_VIEW_TITLE" = "Дадаць удзельнікаў";
@@ -149,7 +149,7 @@
 "ALERT_UNKNOWN_THREAD_WARNING_GROUP_MESSAGE" = "Вы не маеце агульных удзельнікаў з гэтай групай. Перш чым прыняць запыт, уважліва праглядайце яго, каб пазбегнуць непажаданых паведамленняў.";
 
 /* Label for button to learn more about message requests. */
-"ALERT_UNKNOWN_THREAD_WARNING_LEARN_MORE" = "Аб запытах на адпраўку паведамленняў";
+"ALERT_UNKNOWN_THREAD_WARNING_LEARN_MORE" = "Аб запытах на перапіску";
 
 /* Audio file type in All Meda file type picker. */
 "ALL_MEDIA_FILE_TYPE_AUDIO" = "Аўдыё";
@@ -441,9 +441,6 @@
 
 /* A string indicating that an audio message is playing. */
 "AUDIO_ACTIVITY_PLAYBACK_NAME_AUDIO_MESSAGE" = "Аўдыяпаведамленне";
-
-/* Accessibility label for placing an audio call */
-"AUDIO_CALL_LABEL" = "Галасавы званок";
 
 /* action sheet button title to enable built in speaker during a call */
 "AUDIO_ROUTE_BUILT_IN_SPEAKER" = "Вонкавы дынамік";
@@ -785,7 +782,7 @@
 "CALL_VIEW_MUTE_LABEL" = "Апавяшч. адкл.";
 
 /* Error displayed on the 'call' view when the callee needs to grant permission before we can call them. Embeds {callee short name}. */
-"CALL_VIEW_NEED_PERMISSION_ERROR_FORMAT" = "%1$@ атрымае ад вас запыт на паведамленне. Вы зможаце пазваніць, калі ваш запыт на паведамленне будзе прыняты.";
+"CALL_VIEW_NEED_PERMISSION_ERROR_FORMAT" = "%1$@ атрымае ад вас запыт на перапіску. Вы зможаце пазваніць, калі ваш запыт на перапіску будзе прыняты.";
 
 /* Accessibility label to toggle front- vs. rear-facing camera */
 "CALL_VIEW_SWITCH_CAMERA_DIRECTION" = "Змяніць напрамак камеры";
@@ -847,14 +844,14 @@
 /* Title for an action, either long-press context menu or swipe, offering to take the user to the chat associated with a call in the Calls Tab. */
 "CALLS_TAB_GO_TO_CHAT_ACTION_TITLE" = "Перайсці ў чат";
 
-/* Title for a long-press context menu action to join an audio call, triggered from a call in the Calls Tab. */
-"CALLS_TAB_JOIN_AUDIO_CALL_ACTION_TITLE" = "Далучыцца да аўдыязванка";
-
 /* Title for a button offering to let the user join an ongoing call, associated with a call in the Calls Tab. */
 "CALLS_TAB_JOIN_CALL_BUTTON_TITLE" = "Далучыцца";
 
 /* Title for a long-press context menu action to join a video call, triggered from a call in the Calls Tab. */
 "CALLS_TAB_JOIN_VIDEO_CALL_ACTION_TITLE" = "Далучыцца да відэазванка";
+
+/* Title for a long-press context menu action to join a voice call, triggered from a call in the Calls Tab. */
+"CALLS_TAB_JOIN_VOICE_CALL_ACTION_TITLE" = "Join Voice Call";
 
 /* Label explaining that the user has no missed calls, so their Calls Tab is empty. */
 "CALLS_TAB_NO_MISSED_CALLS_LABEL" = "Няма прапушчаных званкоў";
@@ -880,11 +877,11 @@
 /* Title for a button allowing the user to select one or more calls, from the Calls Tab. */
 "CALLS_TAB_SELECT_CALLS_BUTTON_TITLE" = "Выбраць";
 
-/* Title for a long-press context menu action to start an audio call, triggered from a call in the Calls Tab. */
-"CALLS_TAB_START_AUDIO_CALL_ACTION_TITLE" = "Аўдыязванок";
-
 /* Title for a long-press context menu action to start a video call, triggered from a call in the Calls Tab. */
 "CALLS_TAB_START_VIDEO_CALL_ACTION_TITLE" = "Відэазванок";
+
+/* Title for a long-press context menu action to start a voice call, triggered from a call in the Calls Tab. */
+"CALLS_TAB_START_VOICE_CALL_ACTION_TITLE" = "Voice Call";
 
 /* Title for a long-press context menu action to view info about a call, triggered from a call in the Calls Tab. */
 "CALLS_TAB_VIEW_CALL_INFO_ACTION_TITLE" = "Інфармацыя";
@@ -1112,7 +1109,7 @@
 "CONTACT_ABOUT_SHEET_NO_DIRECT_MESSAGES" = "Не было абмену паведамленнямі з %1$@";
 
 /* Indicates that the user has a pending request with the other account. Embeds {{name}} */
-"CONTACT_ABOUT_SHEET_PENDING_REQUEST" = "Запыты паведамлення ў чаканні разгляду";
+"CONTACT_ABOUT_SHEET_PENDING_REQUEST" = "Запыт на перапіску ў чаканні разгляду";
 
 /* Message for a tooltip that appears above a parenthesized name for another user, indicating that that name is the name the other user set for themself. Embeds {{name}} */
 "CONTACT_ABOUT_SHEET_SECONDARY_NAME_TOOLTIP_MESSAGE" = "«%1$@» — назва профілю, якая гэтая асоба ўсталявала для сябе ў Signal.";
@@ -1381,9 +1378,6 @@
 /* Footer for the 'attributes access' section in conversation settings view. */
 "CONVERSATION_SETTINGS_ATTRIBUTES_ACCESS_SECTION_FOOTER" = "Выберыце таго, хто зможа рэдагаваць назву групы, фота, апісанне і таймер знікнення паведамленняў.";
 
-/* Button to start a audio call */
-"CONVERSATION_SETTINGS_AUDIO_CALL_BUTTON" = "аўдыё";
-
 /* Footer string for a contact's badges in conversation settings */
 "CONVERSATION_SETTINGS_BADGES_FOOTER" = "Падтрымлівайце Signal і атрымлівайце значкі для свайго профілю. Націсніце на значок, каб даведацца больш.";
 
@@ -1396,23 +1390,23 @@
 /* Label for 'block user' action in conversation settings view. */
 "CONVERSATION_SETTINGS_BLOCK_USER" = "Заблакаваць карыстальніка";
 
-/* A label indicating that a call was an incoming audio call */
-"CONVERSATION_SETTINGS_CALL_DETAILS_INCOMING_AUDIO_CALL" = "Уваходны аўдыязванок";
-
 /* A label indicating that a call was an incoming video call */
 "CONVERSATION_SETTINGS_CALL_DETAILS_INCOMING_VIDEO_CALL" = "Уваходны відэазванок";
 
-/* A label indicating that a call was an missed audio call */
-"CONVERSATION_SETTINGS_CALL_DETAILS_MISSED_AUDIO_CALL" = "Прапушчаны аўдыязванок";
+/* A label indicating that a call was an incoming voice call */
+"CONVERSATION_SETTINGS_CALL_DETAILS_INCOMING_VOICE_CALL" = "Incoming voice call";
 
 /* A label indicating that a call was an missed video call */
 "CONVERSATION_SETTINGS_CALL_DETAILS_MISSED_VIDEO_CALL" = "Прапушчаны відэазванок";
 
-/* A label indicating that a call was an outgoing audio call */
-"CONVERSATION_SETTINGS_CALL_DETAILS_OUTGOING_AUDIO_CALL" = "Выходны аўдыязванок";
+/* A label indicating that a call was an missed voice call */
+"CONVERSATION_SETTINGS_CALL_DETAILS_MISSED_VOICE_CALL" = "Missed voice call";
 
 /* A label indicating that a call was an outgoing video call */
 "CONVERSATION_SETTINGS_CALL_DETAILS_OUTGOING_VIDEO_CALL" = "Выходны відэазванок";
+
+/* A label indicating that a call was an outgoing voice call */
+"CONVERSATION_SETTINGS_CALL_DETAILS_OUTGOING_VOICE_CALL" = "Outgoing voice call";
 
 /* Label for 'edit attributes access' action in conversation settings view. */
 "CONVERSATION_SETTINGS_EDIT_ATTRIBUTES_ACCESS" = "Рэдагаваць інфармацыю аб групе";
@@ -1554,6 +1548,9 @@
 
 /* Indicates that user is in the system contacts list. */
 "CONVERSATION_SETTINGS_VIEW_IS_SYSTEM_CONTACT" = "Звесткі аб кантакту";
+
+/* Button to start a voice call */
+"CONVERSATION_SETTINGS_VOICE_CALL_BUTTON" = "voice";
 
 /* Message shown in conversation view that offers to add an unknown user to your phone's contacts. */
 "CONVERSATION_VIEW_ADD_TO_CONTACTS_OFFER" = "Дадаць у кантакты";
@@ -1739,10 +1736,10 @@
 "DEBUG_LOG_INFO_BUTTON" = "Інфармацыя пра журналы адладкі";
 
 /* info message text in conversation view */
-"DECLINED_AUDIO_CALL" = "Вы адхілілі галасавы званок";
+"DECLINED_VIDEO_CALL" = "Вы адхілілі відэазванок";
 
 /* info message text in conversation view */
-"DECLINED_VIDEO_CALL" = "Вы адхілілі відэазванок";
+"DECLINED_VOICE_CALL" = "You declined a voice call";
 
 /* Title for the action sheet 'delete' action of the 'delete account confirmation' view controller. */
 "DELETE_ACCOUNT_CONFIRMATION_ACTION_SHEEET_ACTION" = "Выдаліць уліковы запіс";
@@ -1790,7 +1787,7 @@
 "DELETE_CONTACT_ACTION_SHEET_BUTTON" = "Выдаліць";
 
 /* An explanation of what happens in Signal when you remove a system contact. */
-"DELETE_CONTACT_ACTION_SHEET_EXPLANATION" = "Гэтая асоба будзе выдалена з вашых тэлефонных кантактаў. Вы не ўбачыце гэтую асобу падчас пошуку. Калі яна напіша вам, вы атрымаеце запыт на абмен паведамленнямі.";
+"DELETE_CONTACT_ACTION_SHEET_EXPLANATION" = "Гэтая асоба будзе выдалена з вашых тэлефонных кантактаў. Вы не ўбачыце гэтую асобу падчас пошуку. Калі яна напіша вам, вы атрымаеце запыт на перапіску.";
 
 /* Title of action sheet confirming the user wants to delete a system contact. */
 "DELETE_CONTACT_ACTION_SHEET_TITLE" = "Выдаліць кантакт і прыбраць яго з вашага спісу?";
@@ -2824,6 +2821,15 @@
 /* Button to leave a group call */
 "GROUP_CALL_LEAVE_BUTTON" = "Пакінуць званок";
 
+/* Title for the section of the group call member list which displays the list of all members in the call. */
+"GROUP_CALL_MEMBER_LIST_IN_CALL_SECTION_HEADER" = "In Call";
+
+/* Title for the section of the group call member list which displays the list of members with their hand raised. */
+"GROUP_CALL_MEMBER_LIST_RAISED_HANDS_SECTION_HEADER" = "Raised Hands";
+
+/* A count of members in a given group call member list section, displayed after the header. */
+"GROUP_CALL_MEMBER_LIST_SECTION_HEADER_MEMBER_COUNT" = "(%1$d)";
+
 /* String displayed in cell when media from a user can't be displayed in group call grid. Embeds {user's name} */
 "GROUP_CALL_MISSING_MEDIA_KEYS_FORMAT" = "Немагчыма атрымаць аўдыё & відэа ад %1$@";
 
@@ -2835,9 +2841,6 @@
 
 /* Text explaining that you are the only person currently in the group call */
 "GROUP_CALL_NO_ONE_HERE" = "Больш тут нікога няма";
-
-/* Text explaining to the user that nobody has joined this call yet. */
-"GROUP_CALL_NOBODY_IS_IN_YET" = "У гэтым званку пакуль нікога няма.";
 
 /* Copy explaining that a user has joined the group call. Embeds {member name} */
 "GROUP_CALL_NOTIFICATION_ONE_JOINED_FORMAT" = "%1$@ далучыўся(-лася) да званка";
@@ -3470,7 +3473,7 @@
 "HIDE_RECIPIENT_ACTION_SHEET_TITLE_FORMAT" = "Выдаліць %1$@?";
 
 /* An explanation of the consequences of removing a user. */
-"HIDE_RECIPIENT_BEHAVIOR_EXPLANATION" = "Вы не ўбачыце гэтую асобу падчас пошуку. Калі яна напіша вам, вы атрымаеце запыт на абмен паведамленнямі.";
+"HIDE_RECIPIENT_BEHAVIOR_EXPLANATION" = "Вы не ўбачыце гэтую асобу падчас пошуку. Калі яна напіша вам, вы атрымаеце запыт на перапіску.";
 
 /* Button label for the 'remove' button */
 "HIDE_RECIPIENT_BUTTON" = "Выдаліць";
@@ -3521,7 +3524,7 @@
 "HOME_VIEW_MESSAGE_REQUEST_ADDED_TO_GROUP_FORMAT" = "%1$@ дадаў(-ла) вас у групу";
 
 /* Table cell subtitle label for a conversation the user has not accepted. */
-"HOME_VIEW_MESSAGE_REQUEST_CONVERSATION" = "Запыт паведамлення";
+"HOME_VIEW_MESSAGE_REQUEST_CONVERSATION" = "Запыт на перапіску";
 
 /* Format string when search returns no results. Embeds {{search term}} */
 "HOME_VIEW_SEARCH_NO_RESULTS_FORMAT" = "Няма вынікаў для «%1$@»";
@@ -3611,10 +3614,10 @@
 "INBOX_VIEW_EMPTY_INBOX" = "Пакуль няма чатаў.\nПачніце з паведамлення сябру.";
 
 /* info message text in conversation view */
-"INCOMING_AUDIO_CALL" = "Уваходны галасавы званок";
+"INCOMING_VIDEO_CALL" = "Уваходны відэазванок";
 
 /* info message text in conversation view */
-"INCOMING_VIDEO_CALL" = "Уваходны відэазванок";
+"INCOMING_VOICE_CALL" = "Incoming voice call";
 
 /* Indicates that a previously-removed recipient has been added back to the current user's contacts. */
 "INFO_MESSAGE_CONTACT_REINSTATED" = "Гэтая асоба была нанова дададзена ў ваш спіс кантактаў Signal.";
@@ -4261,9 +4264,6 @@
 /* Indicator that separates read from unread messages. */
 "MESSAGES_VIEW_UNREAD_INDICATOR" = "Новыя паведамленні";
 
-/* info message text in conversation view */
-"MISSED_AUDIO_CALL" = "Прапушчаны галасавы званок";
-
 /* info message text in conversation view for when a call was dropped because the contact is blocked in iOS settings */
 "MISSED_CALL_BLOCKED_SYSTEM_CONTACT" = "Прапушчаны званок ад кантакту, што заблакаваны ў наладах тэлефона";
 
@@ -4284,6 +4284,9 @@
 
 /* info message text in conversation view */
 "MISSED_VIDEO_CALL" = "Прапушчаны відэазванок";
+
+/* info message text in conversation view */
+"MISSED_VOICE_CALL" = "Missed voice call";
 
 /* Alert body */
 "MISSING_CAMERA_PERMISSION_MESSAGE" = "Уключыце доступ да камеры ў наладах iOS, каб рабіць відэазванкі ў Signal.";
@@ -4363,9 +4366,6 @@
 /* String representing both wifi and cellular interfaces */
 "NETWORK_INTERFACE_SET_WIFI_CELLULAR" = "Wi-Fi і мабільныя даныя";
 
-/* Title for a long-press context menu action to start an audio call, triggered from a recipient in the New Call contact picker */
-"NEW_CALL_AUDIO_CALL_ACTION_TITLE" = "Аўдыязванок";
-
 /* Accessibility hint describing the action of the new call button on the Calls Tab */
 "NEW_CALL_HINT" = "Выберыце кантакт або групу, каб пачаць з імi новы званок.";
 
@@ -4380,6 +4380,9 @@
 
 /* Title for a long-press context menu action to start a video call, triggered from a recipient in the New Call contact picker */
 "NEW_CALL_VIDEO_CALL_ACTION_TITLE" = "Відэазванок";
+
+/* Title for a long-press context menu action to start a voice call, triggered from a recipient in the New Call contact picker */
+"NEW_CALL_VOICE_CALL_ACTION_TITLE" = "Voice Call";
 
 /* A label the cell that lets you add a new member to a group. */
 "NEW_CONVERSATION_FIND_BY_PHONE_NUMBER" = "Знайсці па нумары тэлефона";
@@ -4511,7 +4514,7 @@
 "NOTE_TO_SELF" = "Нататка для сябе";
 
 /* Body for a notification representing a message request. */
-"NOTIFICATION_BODY_INCOMING_MESSAGE_REQUEST" = "Запыт паведамлення";
+"NOTIFICATION_BODY_INCOMING_MESSAGE_REQUEST" = "Запыт на перапіску";
 
 /* Lock screen notification text presented after user powers on their device without unlocking. Embeds {{device model}} (either 'iPad' or 'iPhone') */
 "NOTIFICATION_BODY_PHONE_LOCKED_FORMAT" = "Магчыма, вы атрымалі паведамленні падчас перазапуску вашага %1$@.";
@@ -4736,13 +4739,10 @@
 "OUTDATED_PAYMENT_CLIENT_REMINDER_TEXT" = "Абнавіце Signal, каб па-ранейшаму выкарыстоўваць плацяжы. Мажліва, ваш баланс неактуальны.";
 
 /* info message text in conversation view */
-"OUTGOING_AUDIO_CALL" = "Выходны галасавы званок";
-
-/* info message text in conversation view */
-"OUTGOING_MISSED_AUDIO_CALL" = "Неадказаны галасавы званок";
-
-/* info message text in conversation view */
 "OUTGOING_MISSED_VIDEO_CALL" = "Неадказаны відэазванок";
+
+/* info message text in conversation view */
+"OUTGOING_MISSED_VOICE_CALL" = "Unanswered voice call";
 
 /* Button for action sheet shown when device transfer completes; quits the Signal app immediately (does not automatically relaunch, but the user may choose to relaunch). */
 "OUTGOING_TRANSFER_COMPLETE_EXIT_ACTION" = "Пакінуць Signal";
@@ -4755,6 +4755,9 @@
 
 /* info message text in conversation view */
 "OUTGOING_VIDEO_CALL" = "Выходны відэазванок";
+
+/* info message text in conversation view */
+"OUTGOING_VOICE_CALL" = "Outgoing voice call";
 
 /* Header title for bank payment details screen */
 "PAYMENT_DETAILS_BANK_TITLE" = "Банкаўскі перавод";
@@ -5012,10 +5015,10 @@
 "PAYMENTS_PREVIEW_TEXT_UNKNOWN" = "Невядомы плацеж";
 
 /* Message for error alert indicating that a given user cannot receive payments because of a pending message request for a recipient that they have sent messages to. */
-"PAYMENTS_RECIPIENT_MISSING_PROFILE_KEY_MESSAGE_W_MESSAGES" = "Каб адправіць плацеж гэтаму карыстальніку, яму трэба прыняць ад вас запыт на адпраўку паведамленняў.";
+"PAYMENTS_RECIPIENT_MISSING_PROFILE_KEY_MESSAGE_W_MESSAGES" = "Каб адправіць плацеж гэтаму карыстальніку, яму трэба прыняць ад вас запыт на перапіску.";
 
 /* Message for error alert indicating that a given user cannot receive payments because of a pending message request for a recipient that they have not sent message to. */
-"PAYMENTS_RECIPIENT_MISSING_PROFILE_KEY_MESSAGE_WO_MESSAGES" = "Каб адправіць плацеж гэтаму карыстальніку, яму трэба прыняць ад вас запыт на адпраўку паведамленняў. Адпраўце яму паведамленне, каб стварыць запыт на адпраўку паведамленняў.";
+"PAYMENTS_RECIPIENT_MISSING_PROFILE_KEY_MESSAGE_WO_MESSAGES" = "Каб адправіць плацеж гэтаму карыстальніку, яму трэба прыняць ад вас запыт на перапіску. Адпраўце яму паведамленне, каб стварыць запыт на перапіску.";
 
 /* Title for error alert indicating that a given user cannot receive payments because of a pending message request. */
 "PAYMENTS_RECIPIENT_MISSING_PROFILE_KEY_TITLE" = "Немагчыма адправіць плацеж";
@@ -5936,7 +5939,7 @@
 "SAFETY_TIPS_HEADER_TITLE" = "Парады па бяспецы";
 
 /* Message describing safety tips for 1:1 conversations. */
-"SAFETY_TIPS_INDIVIDUAL_HEADER_MESSAGE" = "Будзьце пільнымі, калі прымаеце запыты на паведамленні ад незнаёмых людзей. Сцеражыцеся наступнага:";
+"SAFETY_TIPS_INDIVIDUAL_HEADER_MESSAGE" = "Будзьце пільнымі, калі прымаеце запыты на перапіску ад незнаёмых людзей. Сцеражыцеся наступнага:";
 
 /* Message contents for the unknown links in messages safety tip. */
 "SAFETY_TIPS_MESSAGE_LINKS_BODY" = "Будзьце пільнымі, калі атрымліваеце ад незнаёмых людзей паведамленні са спасылкамі на вэб-сайты. Ніколі не адкрывайце спасылкі ад людзей, да якіх няма даверу.";
@@ -6440,7 +6443,7 @@
 "SETTINGS_MEDIA_DOWNLOAD_TYPE_VIDEO" = "Відэа";
 
 /* Explanation for the 'messaging' privacy settings. */
-"SETTINGS_MESSAGING_FOOTER" = "Даведвацца і абагульваць інфармацыю аб паведамленнях, што чытаюцца і пішуцца. Калі гэта функцыя адключана, вы не ўбачыце апавяшчэнняў аб тым, што іншыя карыстальнікі чытаюць або ўводзяць тэкст.";
+"SETTINGS_MESSAGING_FOOTER" = "Даведвацца і абагульваць інфармацыю аб паведамленнях, што чытаюцца і пішуцца. Калі гэта функцыя адключана, вы не ўбачыце апавяшчэнняў аб чытанні паведамленняў і індыкатараў набору тэксту.";
 
 /* Title for settings activity */
 "SETTINGS_NAV_BAR_TITLE" = "Налады";
@@ -7481,7 +7484,7 @@
 "STORY_SETTINGS_LEARN_MORE_SHEET_BULLET_1" = "Пачынаючы размову";
 
 /* Second bullet point for the explainer sheet for signal connections */
-"STORY_SETTINGS_LEARN_MORE_SHEET_BULLET_2" = "Калі вы прынялі запыт на паведамленні";
+"STORY_SETTINGS_LEARN_MORE_SHEET_BULLET_2" = "Калі вы прынялі запыт на перапіску";
 
 /* Third bullet point for the explainer sheet for signal connections */
 "STORY_SETTINGS_LEARN_MORE_SHEET_BULLET_3" = "Ужо ёсць у вашых тэлефонных кантактах";
@@ -8073,6 +8076,9 @@
 
 /* View the story of a group or user */
 "VIEW_STORY" = "Прагледзець гісторыю";
+
+/* Accessibility label for placing a voice call */
+"VOICE_CALL_LABEL" = "Voice Call";
 
 /* Indicates how to cancel a voice message. */
 "VOICE_MESSAGE_CANCEL_INSTRUCTIONS" = "Прагартаць, каб адмяніць";
