--- a/Signal/translations/nl.lproj/PluralAware.stringsdict
+++ b/Signal/translations/nl.lproj/PluralAware.stringsdict
@@ -349,22 +349,6 @@
 			<string>Je kunt niet deelnemen omdat deze oproep het maximale aantal van %1$d deelnemers heeft bereikt. Probeer het later opnieuw.</string>
 		</dict>
 	</dict>
-	<key>GROUP_CALL_IN_THIS_CALL_%d</key>
-	<dict>
-		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@text@</string>
-		<key>text</key>
-		<dict>
-			<key>NSStringFormatSpecTypeKey</key>
-			<string>NSStringPluralRuleType</string>
-			<key>NSStringFormatValueTypeKey</key>
-			<string>d</string>
-			<key>one</key>
-			<string>In deze oproep · %1$d persoon</string>
-			<key>other</key>
-			<string>In deze oproep · %1$d personen</string>
-		</dict>
-	</dict>
 	<key>GROUP_CALL_IS_RINGING_MANY_PEOPLE_%d</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
@@ -632,9 +616,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>De uitnodiging om lid te worden van de groep is voor %1$d persoon ingetrokken.</string>
+			<string>De groepsuitnodiging is voor %1$d persoon ingetrokken.</string>
 			<key>other</key>
-			<string>De uitnodiging om lid te worden van de groep is voor %1$d personen ingetrokken.</string>
+			<string>De groepsuitnodiging is voor %1$d personen ingetrokken.</string>
 		</dict>
 	</dict>
 	<key>GROUP_REMOTE_USER_INVITE_REVOKED_BY_REMOTE_USER_%d</key>
@@ -648,9 +632,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%2$@ heeft voor %1$d persoon de uitnodiging om lid te worden van de groep ingetrokken.</string>
+			<string>%2$@ heeft voor %1$d persoon de groepsuitnodiging ingetrokken.</string>
 			<key>other</key>
-			<string>%2$@ heeft voor %1$d personen de uitnodiging om lid te worden van de groep ingetrokken.</string>
+			<string>%2$@ heeft voor %1$d personen de groepsuitnodiging ingetrokken.</string>
 		</dict>
 	</dict>
 	<key>GROUP_REMOTE_USER_REQUESTED_TO_JOIN_THE_GROUP_AND_CANCELED_%d</key>
